<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobiquity Challenge</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item>My Pics</item>
        <item>Favorites</item>
        <item>On Device</item>
        <item>Map</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_action_content_picture</item>
        <item>@drawable/ic_action_rating_favorite</item>
        <item>@drawable/ic_action_hardware_phone</item>
        <item>@drawable/ic_action_location_map</item>
        <item>@drawable/ic_action_action_settings</item>
    </string-array>

    <string name="dropbox_login">Login to Dropbox</string>
    <string name="dropbox_save">Save to Dropbox</string>
    <string name="local_save">Save to Local Storage</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_creation_date">Creation Date:</string>
    <string name="dialog_location">Location:</string>
    <string name="local_save_success">Picture was successfully saved to phone</string>
    <string name="dropbox_save_success">Picture was uploaded to Dropbox</string>

    <string name="no_items">No Items</string>
    
    <!-- Error Messages -->
    <string name="save_fail">Failed to save image to a local file</string>
    <string name="save_fail_dropbox">Dropbox upload failed</string>


</resources>
