<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp">

    <EditText
        android:id="@+id/picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:minLines="2"
        android:maxLines="4"
        android:inputType="textMultiLine|textCapWords"
        android:textSize="22dp"
        android:gravity="center"
        android:textColor="@color/mobiquity_red"/>

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!-- Creation Date-->
            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/dialog_creation_date"
                    android:paddingTop="5dp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/creationDate"
                    android:layout_width="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:gravity="left"/>
            </TableRow>

            <!-- Location Information-->
            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/dialog_location"
                    android:paddingBottom="10dp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/locationCoors"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="left"/>
            </TableRow>

        </TableLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mobiquity_red" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            android:id="@+id/btn_dropbox_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dropbox_save"
            android:drawableLeft="@drawable/ic_dropbox_logo"
            style="@style/AlertDialogButton"/>

        <Button
            android:id="@+id/btn_local_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_save"
            android:drawableLeft="@drawable/ic_hardware_phone_icon"
            style="@style/AlertDialogButton"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/AlertDialogButton"/>
    </LinearLayout>

</LinearLayout>